Refactor footer in html files

--- a/smart-wallet-application/src/main/resources/templates/base-home.html
+++ b/smart-wallet-application/src/main/resources/templates/base-home.html
@@ -24,6 +24,7 @@
 
     </div>
 </main>
-<div class="footer" th:insert="~{fragments/common/footer :: footer}"></div>
+<div th:replace="~{fragments/footer :: footer}"></div>
+
 </body>
 </html>
