--- a/smart-wallet-application/src/main/resources/templates/index.html
+++ b/smart-wallet-application/src/main/resources/templates/index.html
@@ -25,5 +25,6 @@
     </a>
   </div>
 </main>
-<th:block th:insert="fragments/footer :: footer"></th:block>
+<div th:replace="~{fragments/footer :: footer}"></div>
+
 </body></html>
