--- a/smart-wallet-application/src/main/resources/templates/transactions.html
+++ b/smart-wallet-application/src/main/resources/templates/transactions.html
@@ -167,7 +167,8 @@
     </div>
 </main>
 
-<th:block th:insert="fragments/footer :: footer"></th:block>
+<div th:replace="~{fragments/footer :: footer}"></div>
+
 
 </body>
 </html>
