--- a/smart-wallet-application/src/main/resources/templates/transfer.html
+++ b/smart-wallet-application/src/main/resources/templates/transfer.html
@@ -163,7 +163,8 @@
         </div>
     </div>
 </main>
-<th:block th:insert="fragments/footer :: footer"></th:block>
+<div th:replace="~{fragments/footer :: footer}"></div>
+
 
 <span id="okta-plugin-message-channel-available" style="display: none;"></span></body>
 </html>
