--- a/smart-wallet-application/src/main/resources/templates/home.html
+++ b/smart-wallet-application/src/main/resources/templates/home.html
@@ -270,6 +270,7 @@
         </div>
     </div>
 </main>
-<th:block th:insert="fragments/footer :: footer"></th:block>
+<div th:replace="~{fragments/footer :: footer}"></div>
+
 </body>
 </html>
