--- a/smart-wallet-application/src/main/resources/templates/profile-menu.html
+++ b/smart-wallet-application/src/main/resources/templates/profile-menu.html
@@ -133,7 +133,7 @@
     <div class="home-section">
         <div class="single-section-box profile-menu">
             <div class="profile-header">
-                <img th:src="${user.profilePicture.isEmpty() ? 'https://icons.veryicon.com/png/o/miscellaneous/user-avatar/user-avatar-male-5.png' : user.profilePicture}"
+                <img th:src="${#strings.isEmpty(user.profilePicture) ? 'https://icons.veryicon.com/png/o/miscellaneous/user-avatar/user-avatar-male-5.png' : user.profilePicture}" alt="Profile Picture" class="profile-avatar">
                      alt="Profile Picture" class="profile-avatar">
                 <h2 th:text="${user.username}" class="profile-name"></h2>
             </div>
@@ -149,19 +149,23 @@
                 </div>
             </div>
 
-            <form class="form">
+            <form class="form" th:action="@{'/users/' + ${user.id} + '/profile'}" th:method="PUT" th:object="${userEditRequest}">
 
                 <label for="firstName">First Name</label>
-                <input type="text" id="firstName" placeholder="First Name">
+                <input type="text" id="firstName" placeholder="First Name" th:field="*{firstName}">
+                <p class="alert-warning" th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}"></p>
 
                 <label for="lastName">Last Name</label>
-                <input type="text" id="lastName" placeholder="Last Name">
+                <input type="text" id="lastName" placeholder="Last Name" th:field="*{lastName}">
+                <p class="alert-warning" th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}"></p>
 
                 <label for="email">Email</label>
-                <input type="text" id="email" placeholder="Email Address">
+                <input type="text" id="email" placeholder="Email Address" th:field="*{email}">
+                <p class="alert-warning" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></p>
 
                 <label for="profilePicture">Profile Picture URL</label>
-                <input type="text" id="profilePicture" placeholder="Image Link">
+                <input type="text" id="profilePicture" placeholder="Image Link" th:field="*{profilePicture}">
+                <p class="alert-warning" th:if="${#fields.hasErrors('profilePicture')}" th:errors="*{profilePicture}"></p>
 
                 <button class="profile-actions-button">
                     <p>Save</p>
@@ -170,13 +174,13 @@
                               stroke-linejoin="round"></path>
                     </svg>
                 </button>
-
             </form>
         </div>
     </div>
 </main>
 
-<th:block th:insert="fragments/footer :: footer"></th:block>
+<div th:replace="~{fragments/footer :: footer}"></div>
+
 
 </body>
 </html>
