--- a/smart-wallet-application/src/main/resources/templates/register.html
+++ b/smart-wallet-application/src/main/resources/templates/register.html
@@ -48,6 +48,7 @@
 
     </section>
 </main>
-<th:block th:insert="fragments/footer :: footer"></th:block>
+<div th:replace="~{fragments/footer :: footer}"></div>
+
 </body>
 </html>
