--- a/smart-wallet-application/src/main/resources/templates/subscription-history.html
+++ b/smart-wallet-application/src/main/resources/templates/subscription-history.html
@@ -168,7 +168,8 @@
     </div>
 </main>
 
-<th:block th:insert="fragments/footer :: footer"></th:block>
+<div th:replace="~{fragments/footer :: footer}"></div>
+
 
 </body>
 </html>
