--- a/smart-wallet-application/src/main/resources/templates/transaction-result.html
+++ b/smart-wallet-application/src/main/resources/templates/transaction-result.html
@@ -198,7 +198,8 @@
         </div>
     </div>
 </main>
-<th:block th:insert="fragments/footer :: footer"></th:block>
+<div th:replace="~{fragments/footer :: footer}"></div>
+
 
 </body>
 </html>
