--- a/smart-wallet-application/src/main/resources/templates/wallets.html
+++ b/smart-wallet-application/src/main/resources/templates/wallets.html
@@ -220,7 +220,8 @@
 
     </div>
 </main>
-<th:block th:insert="fragments/footer :: footer"></th:block>
+<div th:replace="~{fragments/footer :: footer}"></div>
+
 
 </body>
 </html>
